@@ -3,6 +3,9 @@ Version: $Id$ $Name$
 purple (05/27/05)
 ---------------------
 + Swapped heading and deltaHeading in spawnStruct (thanks Doodman)
++ Strip the # off names before matching to filters to aid in filter writing
++ Strip the # off the strong of filters as well just to make the # irrevelant
+	to filters (thanks BlueAdept for both these)
 
 purple (05/18/05)
 ---------------------
